// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an address verification address original address renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #FFFFFF;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-3 {
  color: #9CB1DC;
  cursor: pointer;
  display: block;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  line-height: 18px;
  padding: 0.5rem 0 0.5rem 2em;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3150A2;
  width: 100%;
}

.emotion-3::after,
.emotion-3::before {
  position: absolute;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-3::after {
  background: #3150A2;
  border-radius: 100%;
  content: "";
  display: inline-block;
  height: 0.5em;
  left: 3px;
  opacity: 0;
  top: 11px;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: 0.5em;
}

.emotion-3::before {
  border-color: #9CB1DC;
  border-radius: 100%;
  border-style: solid;
  border-width: 1px;
  content: "";
  display: inline-block;
  height: 1em;
  left: 0;
  top: 8px;
  -webkit-transition-property: border-color;
  transition-property: border-color;
  width: 1em;
}

.emotion-3 input[type="radio"] {
  opacity: 0;
  width: 0;
  position: absolute;
}

.emotion-3:after {
  top: 50%;
}

.emotion-3:before {
  top: calc(50% - 3px);
  border-color: #3150A2;
}

.emotion-3 .emotion-6,
.emotion-3 .emotion-8 {
  margin-left: 1.2rem;
}

.emotion-5 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-7 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<body>
    <div>
      <div
        class="emotion-0 emotion-1"
        data-test-id="AddressVerificationAddress"
      >
        <label
          class=" emotion-2 emotion-3 emotion-4"
          for="original-address-radio"
          name="original-address"
        >
          <input
            id="original-address-radio"
            name="original-address"
            type="radio"
          />
          <p
            class="emotion-5 emotion-6"
          >
            ORIGINAL
             
            ADDRESS
          </p>
          <div
            class="emotion-7 emotion-8"
          >
            
                  
            <p>
              495 Greene Ave
            </p>
            
                  
            <p>
              2R
            </p>
            
                  
            <p>
              Brooklyn, NY 11216
            </p>
            
                  
            <p>
              UNITED STATES
            </p>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #FFFFFF;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-3 {
  color: #9CB1DC;
  cursor: pointer;
  display: block;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  line-height: 18px;
  padding: 0.5rem 0 0.5rem 2em;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3150A2;
  width: 100%;
}

.emotion-3::after,
.emotion-3::before {
  position: absolute;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-3::after {
  background: #3150A2;
  border-radius: 100%;
  content: "";
  display: inline-block;
  height: 0.5em;
  left: 3px;
  opacity: 0;
  top: 11px;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: 0.5em;
}

.emotion-3::before {
  border-color: #9CB1DC;
  border-radius: 100%;
  border-style: solid;
  border-width: 1px;
  content: "";
  display: inline-block;
  height: 1em;
  left: 0;
  top: 8px;
  -webkit-transition-property: border-color;
  transition-property: border-color;
  width: 1em;
}

.emotion-3 input[type="radio"] {
  opacity: 0;
  width: 0;
  position: absolute;
}

.emotion-3:after {
  top: 50%;
}

.emotion-3:before {
  top: calc(50% - 3px);
  border-color: #3150A2;
}

.emotion-3 .emotion-6,
.emotion-3 .emotion-8 {
  margin-left: 1.2rem;
}

.emotion-5 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-7 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-test-id="AddressVerificationAddress"
    >
      <label
        class=" emotion-2 emotion-3 emotion-4"
        for="original-address-radio"
        name="original-address"
      >
        <input
          id="original-address-radio"
          name="original-address"
          type="radio"
        />
        <p
          class="emotion-5 emotion-6"
        >
          ORIGINAL
           
          ADDRESS
        </p>
        <div
          class="emotion-7 emotion-8"
        >
          
                  
          <p>
            495 Greene Ave
          </p>
          
                  
          <p>
            2R
          </p>
          
                  
          <p>
            Brooklyn, NY 11216
          </p>
          
                  
          <p>
            UNITED STATES
          </p>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an address verification address provided address renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #FFFFFF;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-2 {
  margin: 0 auto;
}

.emotion-4 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-6 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<body>
    <div>
      <div
        class="emotion-0 emotion-1"
        data-test-id="AddressVerificationAddress"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <p
            class="emotion-4 emotion-5"
          >
            PROVIDED
             
            ADDRESS
          </p>
          <p
            class="emotion-6 emotion-7"
          >
            495 Greene Ave
            , 2R
            <br />
            Brooklyn
            ,
             
            NY
             
            11216
            <br />
            United States
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #FFFFFF;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-2 {
  margin: 0 auto;
}

.emotion-4 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-6 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-test-id="AddressVerificationAddress"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          PROVIDED
           
          ADDRESS
        </p>
        <p
          class="emotion-6 emotion-7"
        >
          495 Greene Ave
          , 2R
          <br />
          Brooklyn
          ,
           
          NY
           
          11216
          <br />
          United States
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an address verification address suggested address renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #F5F6FA;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-3 {
  color: #9CB1DC;
  cursor: pointer;
  display: block;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  line-height: 18px;
  padding: 0.5rem 0 0.5rem 2em;
  position: relative;
  color: #3150A2;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3150A2;
  width: 100%;
}

.emotion-3::after,
.emotion-3::before {
  position: absolute;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-3::after {
  background: #3150A2;
  border-radius: 100%;
  content: "";
  display: inline-block;
  height: 0.5em;
  left: 3px;
  opacity: 0;
  top: 11px;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: 0.5em;
}

.emotion-3::before {
  border-color: #9CB1DC;
  border-radius: 100%;
  border-style: solid;
  border-width: 1px;
  content: "";
  display: inline-block;
  height: 1em;
  left: 0;
  top: 8px;
  -webkit-transition-property: border-color;
  transition-property: border-color;
  width: 1em;
}

.emotion-3::after {
  opacity: 1;
}

.emotion-3::before {
  border-color: #3150A2;
}

.emotion-3 input[type="radio"] {
  opacity: 0;
  width: 0;
  position: absolute;
}

.emotion-3:after {
  top: 50%;
}

.emotion-3:before {
  top: calc(50% - 3px);
  border-color: #3150A2;
}

.emotion-3 .emotion-6,
.emotion-3 .emotion-8 {
  margin-left: 1.2rem;
}

.emotion-5 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-7 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<body>
    <div>
      <div
        class="emotion-0 emotion-1"
        data-test-id="AddressVerificationAddress"
      >
        <label
          class=" emotion-2 emotion-3 emotion-4"
          for="suggested-address-radio"
          name="suggested-address"
        >
          <input
            checked=""
            id="suggested-address-radio"
            name="suggested-address"
            type="radio"
          />
          <p
            class="emotion-5 emotion-6"
          >
            SUGGESTED
             
            ADDRESS
          </p>
          <div
            class="emotion-7 emotion-8"
          >
            
                  
            <p>
              <strong>
                495 GREENE AVE APT 2R
              </strong>
            </p>
            
                  
            <p />
            
                  
            <p>
              BROOKLYN, NY 11216-6466
            </p>
            
                  
            <p>
              UNITED STATES
            </p>
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: grid;
  grid-row-gap: 1.5rem;
  padding: 1.5rem;
  text-align: left;
  background: #F5F6FA;
}

.emotion-0 strong {
  background: #F0E4E3;
  color: #C04318;
  display: inline-block;
}

.emotion-3 {
  color: #9CB1DC;
  cursor: pointer;
  display: block;
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  line-height: 18px;
  padding: 0.5rem 0 0.5rem 2em;
  position: relative;
  color: #3150A2;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #3150A2;
  width: 100%;
}

.emotion-3::after,
.emotion-3::before {
  position: absolute;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-3::after {
  background: #3150A2;
  border-radius: 100%;
  content: "";
  display: inline-block;
  height: 0.5em;
  left: 3px;
  opacity: 0;
  top: 11px;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: 0.5em;
}

.emotion-3::before {
  border-color: #9CB1DC;
  border-radius: 100%;
  border-style: solid;
  border-width: 1px;
  content: "";
  display: inline-block;
  height: 1em;
  left: 0;
  top: 8px;
  -webkit-transition-property: border-color;
  transition-property: border-color;
  width: 1em;
}

.emotion-3::after {
  opacity: 1;
}

.emotion-3::before {
  border-color: #3150A2;
}

.emotion-3 input[type="radio"] {
  opacity: 0;
  width: 0;
  position: absolute;
}

.emotion-3:after {
  top: 50%;
}

.emotion-3:before {
  top: calc(50% - 3px);
  border-color: #3150A2;
}

.emotion-3 .emotion-6,
.emotion-3 .emotion-8 {
  margin-left: 1.2rem;
}

.emotion-5 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  font-size: 1.5rem;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  margin-bottom: 1.2rem;
}

.emotion-7 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.2rem;
  font-size: 1.875rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-test-id="AddressVerificationAddress"
    >
      <label
        class=" emotion-2 emotion-3 emotion-4"
        for="suggested-address-radio"
        name="suggested-address"
      >
        <input
          checked=""
          id="suggested-address-radio"
          name="suggested-address"
          type="radio"
        />

        <p
          class="emotion-5 emotion-6"
        >
          SUGGESTED
           
          ADDRESS
        </p>
        <div
          class="emotion-7 emotion-8"
        >
          
                  
          <p>
            <strong>
              495 GREENE AVE APT 2R
            </strong>
          </p>
          
                  
          <p />
          
                  
          <p>
            BROOKLYN, NY 11216-6466
          </p>
          
                  
          <p>
            UNITED STATES
          </p>
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
